# firm_match

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
src/firm_match/: __init__.py  __main__.py
tests/: __init__.py  test.py  test_firm_match.py
